package com.itbird.design.strategy.demo.retrofit;

/**
 * Created by itbird on 2022/6/28
 */
public class GsonConverterFactory  extends Converter.Factory {
}