@startuml

title __RETROFIT's Class Diagram__\n

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.retrofit {
        interface com.itbird.design.strategy.demo.retrofit.Converter {
            {abstract} + convert()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.retrofit {
        abstract class com.itbird.design.strategy.demo.retrofit.Converter.Factory {
            + requestBodyConverter()
            + responseBodyConverter()
            + stringConverter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.retrofit {
        class com.itbird.design.strategy.demo.retrofit.GsonConverterFactory {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.retrofit {
        class com.itbird.design.strategy.demo.retrofit.Retrofit {
            {static} - converterFactories : List<Factory>
            {static} + addConverterFactory()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.retrofit {
        class com.itbird.design.strategy.demo.retrofit.SimpleXmlConverterFactory {
        }
      }
    }
  }
  

  com.itbird.design.strategy.demo.retrofit.Converter +-down- com.itbird.design.strategy.demo.retrofit.Converter.Factory
  com.itbird.design.strategy.demo.retrofit.GsonConverterFactory -up-|> com.itbird.design.strategy.demo.retrofit.Converter.Factory
  com.itbird.design.strategy.demo.retrofit.SimpleXmlConverterFactory -up-|> com.itbird.design.strategy.demo.retrofit.Converter.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
